[tool.poetry]
name = "wordle_yq2397"
version = "0.1.0"
description = "A Wordle game package"
authors = ["Yutong Quan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autoapi (>=3.6.1,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "myst-parser (>=4.0.1,<5.0.0)",
    "myst-nb (>=1.3.0,<2.0.0)"
]
